--- a/myshop/shop/templates/shop/cart.html
+++ b/myshop/shop/templates/shop/cart.html
@@ -2,12 +2,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>My Shop</title>
     <link rel="stylesheet" href="{% static 'shop/styles.css' %}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<h2>Your Cart</h2>
 <div class="cart-container">
   {% for item in cart_items %}
     <div class="cart-item">
