--- a/myshop/shop/templates/shop/register.html
+++ b/myshop/shop/templates/shop/register.html
@@ -2,15 +2,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
+    <link rel="stylesheet" href="{% static 'shop/styles.css' %}">
 </head>
-<body>
-    <h2>Register</h2>
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Sign Up</button>
-    </form>
-    <p>Already have an account? <a href="{% url 'login' %}">Log in here</a>.</p>
+<body class="auth-form-container">
+    <div>
+        <form method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Sign Up</button>
+        </form>
+        <div>Already have an account? <a href="{% url 'login' %}">Log in here</a>.</div>
+    </div>
 </body>
 </html>
